20060321-r1
--------------------------------------
Just maintained version of previous release:
- fixed a severe bug on append_simulations(...) introduced in 20060321, however GA based
  algorithm shouldn't have been affected.
- various fuzzy approximation fixes.


20060321
---------------------------------------
- Added Fuzzy approximation
- support for new Trimaran 3.7 
- post_install.sh script for easier workspace setup
- moved common routines to common.cpp
- cleaner class interfaces
- wait_key() after each error condition


20050512
---------------------------------------
- PD_kernel.c: rewritten L1I cache reference code to avoid unlimited
  growing of memory usage during simulation
- PD_dinero.c: bus transitions are now computed here. No more huge
  cache reference files and computational overhead. 
- GA: user can now choose how often to write out a pareto report
- added overall regalloc overhead report in detail estimation file
- separate SUBSPACES directory into trimaran-workspace/epic-explorer
- updated installing instructions
- estimator.cpp: changed unsigned long -> unsigned long long in estimator sources
- explorer.cpp: removed prefixed explorations functions (e.g.
  test_explore_L1D()). The code has been moved to test() function to
  create some example of Explorer class usage.
- Reorganized README file

20050207
---------------------------------------
- cleaner .est files, fixed IPC (ops/cyles) report
- fixed a bug that did not allow to start a new exploration when 
  the only difference from the previous was the value of H formation option
- exit with error when trying to set an invalid value to a
  configuration space parameter (prints debug info and doesn't prompt
  anymore to manually set valid value)
- changed some data variables from int to unsigned long to avoid
  overflow with long running benchmarks

20042212
---------------------------------------
- suppport for saving a file with details of each
  configuration estimate